# routes/index.js
@@ -3,10 +3,11 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    //#swagger.tags=['Hello World]
-    res.send('Hello World!')
+    //#swagger.tags=['Hello Project 2 World']
+    res.send('Hello Project 2 World!')
 });
 
-router.use('/contacts', require('./contacts'));
+router.use('/people', require('./people'));
+router.use('/companies', require('./companies'));
 
 module.exports = router;
